// Generated file
import "ccsds_mal/types.proto";



package ccsds_mal.protobuf;

message NamedValue {
extensions 3 to 103;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 2;
}
